--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-Adaptation of the [html5-boilerplate project] https://github.com/paulirish/html5-boilerplate/ 
+Adaptation of the [html5-boilerplate project](https://github.com/paulirish/html5-boilerplate/)
 on github. This project users html5-boilerplate as a foundation and is adapted for WordPress
-and builds the free [toolbox theme] http://wordpress.org/extend/themes/toolbox.
+and builds the free [toolbox theme](http://wordpress.org/extend/themes/toolbox).
 
 Toolbox is a semantic, HTML5, canvas for CSS artists and an ultra-minimal set of super-clean
 templates for your own WordPress theme development.
